[tool.poetry]
name = "pubmed-paper-search"
version = "0.1.0"
description = "A Python tool to fetch research papers from PubMed with pharmaceutical/biotech company affiliations"
authors = ["Developer <developer@example.com>"]
readme = "README.md"
homepage = "https://github.com/your-username/pubmed-paper-search"
repository = "https://github.com/your-username/pubmed-paper-search"
keywords = ["pubmed", "research", "papers", "pharmaceutical", "biotech", "api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
packages = [{include = "pubmed_search"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
click = "^8.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
mypy = "^1.5.0"
flake8 = "^6.0.0"

[tool.poetry.scripts]
get-papers-list = "pubmed_search.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"